Add Preview react component.

--- a/src/viewer.styl
+++ b/src/viewer.styl
@@ -4,3 +4,7 @@ body
 .file-browser
     background-color: rgba(90, 60, 120, 0.7)
     height: 100%
+
+.preview
+    background-color: rgba(120, 120, 120, 0.7)
+    height: 100%
