--- a/src/viewer.styl
+++ b/src/viewer.styl
@@ -1,6 +1,15 @@
 body
     font-size: 30px
 
+.full-width
+    width: 100%
+
+.full-height
+    height: 100%
+
+.half-height
+    height: 50%
+
 .file-browser
     background-color: rgba(90, 60, 120, 0.7)
     height: 100%
