--- a/src/viewer.styl
+++ b/src/viewer.styl
@@ -8,8 +8,10 @@
     height: 50%
 
 .file-browser
+    overflow-y: auto
     background-color: rgba(90, 60, 120, 0.7)
     height: 100%
+    padding-left: 5px
 
 .preview
     background-color: rgba(120, 120, 120, 0.7)
@@ -18,3 +20,10 @@
 .history
     background-color: rgba(60, 120, 60, 0.7)
     height: 100%
+
+.file-browser div.icon
+    width: 40px
+    height: 40px
+    display: inline-block
+    overflow-x: hidden
+    margin: 2px
