--- a/src/viewer.styl
+++ b/src/viewer.styl
@@ -27,3 +27,6 @@
     display: inline-block
     overflow-x: hidden
     margin: 2px
+
+.file-browser div.icon.selected
+    border: 1px dotted black;
