--- a/src/viewer.styl
+++ b/src/viewer.styl
@@ -17,6 +17,12 @@
     background-color: rgba(120, 120, 120, 0.7)
     height: 100%
 
+.panel
+    background-color: rgba(120, 120, 120, 0.7)
+
+.panel .handle
+    width: 100%
+
 .file-browser div.icon
     width: 40px
     height: 40px
