Limit Result panel max size.

--- a/client/panel.styl
+++ b/client/panel.styl
@@ -1,7 +1,11 @@
 .panel
     resize: both
-    overflow: scroll
+    overflow: auto
     position: absolute
+    width: auto
+    max-width: 50%
+    height: auto
+    max-height: 100%
     background-color: rgba(120, 120, 120, 0.7)
 
 .panel .handle
