Fix positions of FileBrowser and Result.

--- a/client/result.styl
+++ b/client/result.styl
@@ -1,7 +1,3 @@
-div.result-panel
-    max-width: 50%
+.result pre
     max-height: 80%
-
-.result-panel pre
-    max-height: 100%
-    overflow: auto
+    overflow: scroll
