--- a/client/viewer.styl
+++ b/client/viewer.styl
@@ -1,5 +1,14 @@
+#main
+    position: fixed
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+
 .full-width
     width: 100%
+    max-width: 100%
 
 .full-height
     height: 100%
+    max-height: 100%
