Change layout, window style to tree style.
The current window style layout makes hard to select files in the different
directory.

--- a/client/file-browser.styl
+++ b/client/file-browser.styl
@@ -1,5 +1,10 @@
 .file-browser
-    overflow-y: auto
+    overflow-x: scroll
     background-color: rgba(90, 60, 120, 0.7)
     height: 100%
-    padding-left: 5px
+
+.file-browser-inner
+    overflow-x: visible
+
+.file-browser .column
+    display: inline-block
