--- a/client/file-browser.styl
+++ b/client/file-browser.styl
@@ -1,10 +1,10 @@
 .file-browser
-    overflow-x: scroll
-    background-color: rgba(90, 60, 120, 0.7)
     height: 100%
 
 .file-browser-inner
-    overflow-x: visible
+    overflow-x: scroll
+    height: 100%
 
 .file-browser .column
     display: inline-block
+    width: 200px
